<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:orientation="vertical"
                android:padding="8dp">


    <com.sunfusheng.glideimageview.GlideImageView
        android:id="@+id/iv_icon"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        app:siv_shape_type="rectangle"
        tools:background="@mipmap/image_head"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"

        android:layout_toEndOf="@+id/iv_icon"
        android:text="@string/name_colon"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toEndOf="@+id/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        tools:text="@string/my_name"
        />

    <TextView
        android:id="@+id/jon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/iv_icon"
        android:text="@string/job_name_colon"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv_job_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/jon_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        tools:text="Android"
        />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_job_name"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/iv_icon"
        android:text="@string/phone_colon"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_job_name"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        tools:text="@string/phone_number"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_phone"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/iv_icon"
        android:text="@string/email_colon"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_phone"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        tools:text="@string/my_mail"
        />
</RelativeLayout>