<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_wechat_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@mipmap/img_we_chat_code"/>

    <TextView
        android:id="@+id/tv_tip_make_we_chat_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_make_we_chat_friend_by_code"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_below="@+id/iv_wechat_code"/>

    <TextView
        android:id="@+id/tv_tip_make_we_chat_friend_by_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_make_we_chat_friend_by_count"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:layout_below="@+id/tv_tip_make_we_chat_friend"/>
    <TextView
        android:id="@+id/tv_we_chat_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_chat"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/bg_tv_wechat_count"
        android:layout_below="@+id/tv_tip_make_we_chat_friend_by_count"/>
    
    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/tv_we_chat_count"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_copy_we_chat"
            android:layout_width="wrap_content"
            android:text="@string/copy"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:background="@drawable/bg_color_primary_circle"
            android:layout_height="35dp"/>
        <Button
            android:id="@+id/btn_open_we_chat"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:text="@string/open_we_chat"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/bg_color_primary_circle"
            android:layout_height="35dp"/>
    </android.support.v7.widget.ButtonBarLayout>
</RelativeLayout>