<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/cv_fragment_rv_padding">

    <TextView
        android:id="@+id/tv_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/app_name"/>

    <TextView
        android:id="@+id/tv_copyright_colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_project_name"
        android:layout_marginStart="5dp"
        android:text="@string/copyright_colon"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_project_name"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_copyright_colon"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
        android:textSize="14sp"
        tools:text="@string/app_name"/>

    <TextView
        android:id="@+id/tv_download_url_colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_copyright"
        android:layout_marginStart="5dp"
        android:text="@string/download_url_colon"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_download_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_copyright"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_download_url_colon"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
        android:textSize="14sp"
        tools:text="@string/app_name"/>

    <TextView
        android:id="@+id/tv_dev_tool_colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_download_url"
        android:layout_marginStart="5dp"
        android:text="@string/dev_tool_colon"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_dev_tool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_download_url"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_dev_tool_colon"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
        android:textSize="14sp"
        tools:text="@string/app_name"/>

    <TextView
        android:id="@+id/tv_project_desc_colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dev_tool"
        android:layout_marginStart="5dp"
        android:text="@string/project_desc_colon"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_project_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dev_tool"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_project_desc_colon"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
        android:textSize="14sp"
        tools:text="@string/app_name"/>

    <TextView
        android:id="@+id/tv_project_technology_colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_project_desc"
        android:layout_marginStart="5dp"
        android:text="@string/project_technology_colon"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_project_technology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_project_desc"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_project_technology_colon"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
        android:textSize="14sp"
        tools:text="@string/app_name"/>
</RelativeLayout>